examples/test/testpolicy9197.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9197
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key15: value42
      key14: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value6
      podSelector:
        matchLabels:
          key33: value27
          key41: value48
          key42: value4
